scrollbar fix

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,5 @@
 #landing-container {
-  width: 98.7vw !important;
+  width: 100vw !important;
   height: 100vh !important;
   margin: 0px !important;
   padding: 0px !important;
@@ -68,7 +68,7 @@
   opacity: 0.7;
 }
 .info_cont{
-  width:  98.7vw !important;
+  width:  100vw !important;
 }
 .info_cont_inner {
   position: relative;
@@ -174,7 +174,7 @@
 /* EVENTS  */
 #Events {
   flex-basis: 50% !important;
-  width:  98.7vw;
+  width:  100vw;
 }
 #event-bg{
   position: relative;
@@ -232,7 +232,7 @@
 
 #event_heading{
   transform: scaleY(1.3);
-  width: 98.7vw !important;
+  width: 100vw !important;
   border-bottom: 4px solid white; 
 }
 
